--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- Firebase SDK -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+import { getFirestore, doc, setDoc, onSnapshot, getDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
 const firebaseConfig = {
@@ -88,65 +88,25 @@ const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 signInAnonymously(getAuth(app)).then(()=>console.log("[auth] signed in")).catch(console.error);
 
-window.firebaseBits = { db, doc, setDoc, onSnapshot };
+window.firebaseBits = { db, doc, setDoc, onSnapshot, getDoc };
 </script>
 
 <script>
 /* ---------------- Shared State ---------------- */
-let monthStore={}, current=new Date(), hot;
+let monthStore={}, current=new Date(), hot, directoryHot;
 let lastSel=null, clipboardMeta=null;
 const COLS_PER_DAY=2, DAYS_PER_WEEK=7, TOTAL_COLS=DAYS_PER_WEEK*COLS_PER_DAY;
 let bodyRows=[];
-let unwatchMonth=null;
+let unwatchMonth=null, unwatchDirectory=null;
 
 /* Firebase helpers */
-const { db, doc, setDoc, onSnapshot } = window.firebaseBits;
+const { db, doc, setDoc, onSnapshot, getDoc } = window.firebaseBits;
 
 function monthKey(y,m){ return `${y}-${String(m+1).padStart(2,'0')}`; }
 
-async function saveMonth(key){
-  if(!db) return;
-  try {
-    const state=monthStore[key];
-    if(!state) return;
-
-    // Flatten 2D array
-    const cleanData = state.data.map((row,i)=>({row:i, values: row.slice()}));
-
-    const calendar=(state.calendar||[]).map(w=>
-      w.map(d=>({date:d.date.toISOString(),inMonth:d.inMonth}))
-    );
-
-    await setDoc(doc(db,"months",key),{
-      data:cleanData,
-      meta:state.meta||{},
-      bodyRows:state.bodyRows||[],
-      calendar
-    },{merge:true});
-
-    console.log("[saveMonth] saved", key, cleanData.length,"rows");
-  }catch(e){console.error("[saveMonth] error",e);}
-}
-
-async function loadMonth(key,y,m){
-  const ref=doc(db,"months",key);
-  if(unwatchMonth){unwatchMonth();unwatchMonth=null;}
-  unwatchMonth=onSnapshot(ref,(snap)=>{
-    if(!snap.exists()) return;
-    const s=snap.data();
-    console.log("[onSnapshot update]", key, s);
-
-    // Unflatten back into 2D
-    const rows = (s.data||[]).map(r=>r.values);
-    const calendar=(s.calendar||[]).map(w=>
-      w.map(d=>({date:new Date(d.date),inMonth:d.inMonth}))
-    );
-
-    monthStore[key]={...monthStore[key],data:rows,meta:s.meta||{},bodyRows:s.bodyRows||[],calendar};
-    bodyRows=monthStore[key].bodyRows.slice();
-    if(hot){hot.loadData(monthStore[key].data);hot.render();}
-  });
-}
+/* ---------- Firestore flatten/unflatten for Handsontable 2D grid ---------- */
+function flatten2D(arr){ return arr.map((row,i)=>({row:i, values: row.slice()})); }
+function unflatten2D(objs){ return (objs||[]).map(o=>o.values); }
 
 /* ---------------- Page Switching ---------------- */
 function showPage(id){
@@ -191,6 +151,38 @@ function colorRenderer(instance, td, row, col, prop, value, cellProps){
 function weekStarts(){let starts=[],acc=0;for(let i=0;i<bodyRows.length;i++){starts.push(acc);acc+=1+bodyRows[i];}return starts;}
 function weekIndexForRow(rowIdx){const starts=weekStarts();for(let i=0;i<bodyRows.length;i++){if(rowIdx>=starts[i]&&rowIdx<=starts[i]+bodyRows[i])return i;}return -1;}
 
+/* ---------------- Firebase save/load ---------------- */
+async function saveMonth(key){
+  try{
+    const state=monthStore[key];
+    if(!state) return;
+    const cleanData = flatten2D(state.data);
+    const calendar=(state.calendar||[]).map(w=>w.map(d=>({date:d.date.toISOString(),inMonth:d.inMonth})));
+    await setDoc(doc(db,"months",key),{
+      data:cleanData,
+      meta:state.meta||{},
+      bodyRows:state.bodyRows||[],
+      calendar
+    },{merge:true});
+    console.log("[saveMonth] saved", key, cleanData.length,"rows");
+  }catch(e){ console.error("[saveMonth] error", e); }
+}
+
+async function attachMonthListener(key){
+  if(unwatchMonth){unwatchMonth(); unwatchMonth=null;}
+  unwatchMonth = onSnapshot(doc(db,"months",key),(snap)=>{
+    if(!snap.exists()) return;
+    const s=snap.data();
+    const rows = unflatten2D(s.data||[]);
+    const calendar=(s.calendar||[]).map(w=>w.map(d=>({date:new Date(d.date),inMonth:d.inMonth})));
+    monthStore[key]={...monthStore[key],data:rows,meta:s.meta||{},bodyRows:s.bodyRows||[],calendar};
+    bodyRows=monthStore[key].bodyRows.slice();
+    if(hot){ hot.loadData(monthStore[key].data); hot.render(); }
+    console.log("[onSnapshot] month", key, "rows:", rows.length);
+  });
+}
+
+/* ---------------- renderMonth ---------------- */
 async function renderMonth(){
   const y=current.getFullYear(), m=current.getMonth(), key=monthKey(y,m);
   const weeks=numWeeks(y,m);
@@ -209,7 +201,7 @@ async function renderMonth(){
       acc+=1+br[w];
     }
     monthStore[key]={data,bodyRows:br,meta:{},dayMeta,calendar:matrix,shiftLog:[],summary:[],summaryStudy:[],summarySite:[]};
-    await saveMonth(key);
+    await saveMonth(key); // create doc if missing
   }
   bodyRows=monthStore[key].bodyRows.slice();
   document.getElementById("monthLabel").textContent=current.toLocaleString('default',{month:'long'})+" "+y;
@@ -222,13 +214,21 @@ async function renderMonth(){
     contextMenu:true,
     cells:(r,c)=>{let props={renderer:colorRenderer}; if(weekStarts().includes(r)) props.readOnly=true; return props;},
     afterSelectionEnd:(r1,c1,r2,c2)=>{lastSel=[r1,c1,r2,c2];},
-    afterChange:(changes,source)=>{if(source!=='loadData'){console.log("[afterChange]",changes);saveMonth(key);}},
-    afterPaste:(data,coords)=>{saveMonth(key);}
+    afterCopy:(data,coords)=>{clipboardMeta=[];coords.forEach(({startRow,startCol,endRow,endCol})=>{
+      for(let r=startRow;r<=endRow;r++)for(let c=startCol;c<=endCol;c++){
+        const key=monthKey(current.getFullYear(),current.getMonth());
+        const color=monthStore[key]?.meta?.[`${r}:${c}`]||null;
+        clipboardMeta.push({r:r-startRow,c:c-startCol,color});
+      }});},
+    afterPaste:(data,coords)=>{if(!clipboardMeta)return;const {startRow,startCol}=coords[0];const key=monthKey(current.getFullYear(),current.getMonth());
+      clipboardMeta.forEach(item=>{if(item.color){const rr=startRow+item.r,cc=startCol+item.c;if(!monthStore[key].meta)monthStore[key].meta={};monthStore[key].meta[`${rr}:${cc}`]=item.color;}});
+      hot.render(); saveMonth(key);},
+    afterChange:(changes, source)=>{ if(source!=='loadData'){ console.log("[afterChange]",changes); saveMonth(key);} }
   });
-  await loadMonth(key,y,m);
+  await attachMonthListener(key);
 }
-function prevMonth(){current.setMonth(current.getMonth()-1);renderMonth();}
-function nextMonth(){current.setMonth(current.getMonth()+1);renderMonth();}
+function prevMonth(){ current.setMonth(current.getMonth()-1); renderMonth(); }
+function nextMonth(){ current.setMonth(current.getMonth()+1); renderMonth(); }
 
 /* ---------------- Colors ---------------- */
 const colors=["#f28b82","#fbbc04","#fff475","#ccff90","#a7ffeb","#cbf0f8","#aecbfa","#d7aefb","#fdcfe8","#e6c9a8","#e8eaed","#d50000","#c51162","#aa00ff","#304ffe","#2962ff","#0091ea","#00b8d4","#00c853","#64dd17"];
@@ -245,11 +245,18 @@ function applyColor(color){
 }
 
 /* ---------------- Row Add/Delete ---------------- */
-function shiftMeta(meta,startRow,delta){const newMeta={};Object.entries(meta).forEach(([k,v])=>{let [r,c]=k.split(":").map(Number);if(r>=startRow)r+=delta;newMeta[`${r}:${c}`]=v;});return newMeta;}
+function shiftMeta(meta,startRow,delta){const newMeta={};Object.entries(meta||{}).forEach(([k,v])=>{let [r,c]=k.split(":").map(Number);if(r>=startRow)r+=delta;newMeta[`${r}:${c}`]=v;});return newMeta;}
 function addRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);const sel=lastSel||hot.getSelectedLast();if(!sel)return;const w=weekIndexForRow(sel[0]);if(w<0)return;const key=monthKey(current.getFullYear(),current.getMonth());const start=weekStarts()[w]+1;bodyRows[w]+=n;monthStore[key].bodyRows=bodyRows.slice();monthStore[key].data.splice(start,0,...Array.from({length:n},()=>Array(TOTAL_COLS).fill("")));monthStore[key].meta=shiftMeta(monthStore[key].meta,start,n);renderMonth();saveMonth(key);}
 function delRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);const sel=lastSel||hot.getSelectedLast();if(!sel)return;const w=weekIndexForRow(sel[0]);if(w<0)return;if(bodyRows[w]<=n)return;const key=monthKey(current.getFullYear(),current.getMonth());const start=weekStarts()[w]+1;bodyRows[w]-=n;monthStore[key].bodyRows=bodyRows.slice();monthStore[key].data.splice(start,n);monthStore[key].meta=shiftMeta(monthStore[key].meta,start,-n);renderMonth();saveMonth(key);}
 
-/* ---------------- Reports (placeholder) ---------------- */
+/* ---------------- Directory ---------------- */
+directoryHot=new Handsontable(document.getElementById('directory'),{
+  data:[["","",""]],
+  colHeaders:["Name","Email","Phone"], rowHeaders:true, minSpareRows:1,
+  contextMenu:true, licenseKey:'non-commercial-and-evaluation'
+});
+function getDirectoryMap(){const map={};directoryHot.getData().forEach(r=>{const name=(r[0]||"").trim().toLowerCase();const email=(r[1]||"").trim();if(name&&email)map[name]=email;});return map;}
+  /* ---------------- Process Schedule ---------------- */
 function parseSchedule(y, m) {
   const key = monthKey(y, m);
   const state = monthStore[key];
@@ -289,6 +296,7 @@ function parseSchedule(y, m) {
       const study = (data[r][c] || "").trim();
       const visit = (data[r][c + 1] || "").trim();
 
+      // Skip travel-only days
       const forbidden = ["TRAVEL","TRAVEL AM","TRAVEL PM","STAY","DRIVE"];
       if (forbidden.includes(study.toUpperCase())) { r++; continue; }
 
@@ -322,12 +330,14 @@ function parseSchedule(y, m) {
           rr++;
         }
 
+        // ShiftLog entries
         roles.forEach(({ role, emp }) => {
           const email = emailMap[emp.toLowerCase()] || "";
           shiftLog.push([dateStr, study, visit, role, emp, email, site, pi]);
           summaryShifts[emp] = (summaryShifts[emp] || 0) + 1;
         });
 
+        // Unique visits counting (study/site by day)
         if (dateObj) {
           const dKey = formatDate(dateObj);
 
@@ -360,7 +370,7 @@ function parseSchedule(y, m) {
   state.summarySite = Object.entries(siteVisits).map(([site, dates]) => [site, dates.size]);
 }
 
-/* ---------------- Reports (YOUR BASE) ---------------- */
+/* ---------------- Reports ---------------- */
 function refreshMonthSelect(){
   const sel=document.getElementById('monthSelect');
   sel.innerHTML="";
@@ -404,23 +414,8 @@ function renderTable(id,hdrs,rows){
   document.getElementById(id).innerHTML = html;
 }
 
-/* ---------------- Diagnostics ---------------- */
-async function testFirebase(){
-  if(!window.firebaseBits){ console.warn("Firebase not ready"); alert("Firebase not ready. Check Console for errors."); return; }
-  try{
-    const { db, doc, setDoc, getDoc } = window.firebaseBits;
-    await setDoc(doc(db,"diagnostics","hello"),{ts:Date.now(),note:"hi from scheduler"});
-    const snap = await getDoc(doc(db,"diagnostics","hello"));
-    console.log("Diagnostics doc:", snap.exists()? snap.data(): "(missing)");
-    alert("Firebase test OK. See Console for details.");
-  }catch(e){
-    console.error("Diagnostics failed:", e);
-    alert("Firebase test FAILED. See Console for details.");
-  }
-}
-
-/* ---------------- Init (YOUR BASE) ---------------- */
-renderMonth(); // render immediately (works without Firebase too)
+/* ---------------- Init ---------------- */
+renderMonth();
 </script>
 </body>
 </html>
